--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=UTC
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://139.199.10.50:3306/SSMTest?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+jdbc.username=xuweijie
+jdbc.password=xuweijie
