--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,13 @@
       <version>1.0</version>
     </dependency>
 
+    <!--kaptcha验证码-->
+    <dependency>
+      <groupId>com.github.penggle</groupId>
+      <artifactId>kaptcha</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>ssmshiro</finalName>
