--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,13 @@
       <version>2.3.2</version>
     </dependency>
 
+    <!--joda-time框架-->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.7</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>ssmshiro</finalName>
