--- a/pom.xml
+++ b/pom.xml
@@ -166,26 +166,26 @@
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-spring</artifactId>
-      <version>1.3.2</version>
+      <version>1.4.0-RC2</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-web</artifactId>
-      <version>1.3.2</version>
+      <version>1.4.0-RC2</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-core</artifactId>
-      <version>1.3.2</version>
+      <version>1.4.0-RC2</version>
     </dependency>
 
     <!--添加ehcache-->
     <dependency>
       <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache</artifactId>
-      <version>2.10.3</version>
+      <artifactId>ehcache-core</artifactId>
+      <version>2.6.11</version>
     </dependency>
 
     <!-- 添加 shiro-ehcache 接口依赖-->
