--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,13 @@
       <version>2.9.7</version>
     </dependency>
 
+    <!--Freemarker-->
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.23</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>ssmshiro</finalName>
