更改Mybatis设置，加入Mybatis Plus,设置多数据源

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-
+validationQuery=SELECT 1
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://120.25.79.159:3306/SSMDB?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 jdbc.username=xuweijie
