--- a/pom.xml
+++ b/pom.xml
@@ -47,23 +47,36 @@
     </dependency>
 
     <dependency>
-      <groupId>c3p0</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>0.9.1.2</version>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.0.29</version>
     </dependency>
 
     <!--2.dao框架:MyBatis依赖-->
+    <!--<dependency>-->
+      <!--<groupId>org.mybatis</groupId>-->
+      <!--<artifactId>mybatis</artifactId>-->
+      <!--<version>3.4.1</version>-->
+    <!--</dependency>-->
+
+    <!--&lt;!&ndash;mybatis自身实现的spring整合依赖&ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.mybatis</groupId>-->
+      <!--<artifactId>mybatis-spring</artifactId>-->
+      <!--<version>1.3.0</version>-->
+    <!--</dependency>-->
+
     <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis</artifactId>
-      <version>3.4.1</version>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus</artifactId>
+      <version>2.0.5</version>
     </dependency>
 
-    <!--mybatis自身实现的spring整合依赖-->
+    <!--自动生成代码-->
     <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis-spring</artifactId>
-      <version>1.3.0</version>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
     </dependency>
 
     <!--3.Servlet web相关依赖-->
