--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>ssmshiro Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+
 
     <!--补全项目依赖-->
     <!--1.日志 java日志有:slf4j,log4j,logback,common-logging
